--- a/www/edit.html
+++ b/www/edit.html
@@ -25,7 +25,7 @@
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.goto_algorithm_preview()"
                     class="btn btn-outline-success mx-auto">Preview</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.save_algorithm()"
-                    class="owned-content btn btn-outline-success mx-auto">Save</button>
+                    class="owned-content logged_in_content btn btn-outline-success mx-auto">Save</button>
                 <button style="background-color: rgba(0,0,0,.75);" type="button" onclick="state.download_algorithm()"
                     class="btn btn-outline-success mx-auto">Download</button>
             </h1>
