--- a/www/index.html
+++ b/www/index.html
@@ -1036,7 +1036,7 @@
         }
 
         //Utility function
-        function getQueryVariable(variable) {
+        function getQueryVariable(variable, default_value) {
             var query = window.location.search.substring(1);
             var vars = query.split('&');
             for (var i = 0; i < vars.length; i++) {
@@ -1045,7 +1045,39 @@
                     return decodeURIComponent(pair[1]);
                 }
             }
-            return null;
+            return default_value;
+        }
+
+        //Utility function
+        function setQueryVariable(variable, value) {
+            var query = window.location.search.substring(1);
+            var vars = query.split('&');
+            var pairs = [];
+            for (var i = 0; i < vars.length; i++) {
+                var pair = vars[i].split('=');
+                if (decodeURIComponent(pair[0]) == variable) {
+                    if(pair.length > 1)
+                        pair[1] = encodeURIComponent(value);
+                    else
+                        pair.push(encodeURIComponent(value))
+                }
+                pairs.push(pair);
+            }
+
+            var new_search = "?"
+
+            for(var i = 0; i < pairs.length; i++)
+            {
+                if(pairs[i].length > 1)
+                {
+                    new_search += pairs[i][0] + "=" + pairs[i][1];
+                    if(i != pairs.length-1)
+                        new_search += "&";
+                }
+            }
+            
+            var new_url = window.location.protocol + "//" + window.location.host + window.location.pathname + new_search + window.location.hash;;
+            window.history.replaceState({}, document.title, new_url);
         }
 
 
