--- a/www/index.html
+++ b/www/index.html
@@ -1053,6 +1053,7 @@
             var query = window.location.search.substring(1);
             var vars = query.split('&');
             var pairs = [];
+            var found = false;
             for (var i = 0; i < vars.length; i++) {
                 var pair = vars[i].split('=');
                 if (decodeURIComponent(pair[0]) == variable) {
@@ -1060,9 +1061,13 @@
                         pair[1] = encodeURIComponent(value);
                     else
                         pair.push(encodeURIComponent(value))
+                    found = true;
                 }
                 pairs.push(pair);
             }
+
+            if(!found)
+                pairs.push([variable, encodeURIComponent(value)]);
 
             var new_search = "?"
 
