--- a/www/index.html
+++ b/www/index.html
@@ -1271,7 +1271,7 @@
         window.edit_html_editor = CodeMirror.fromTextArea(document.getElementById("edit_algorithm_html_textarea"), {
             mode: "xml",
             lineNumbers: false,
-            theme: "the-matrix",
+            //theme: "the-matrix",
             autoRefresh: true,
             lineWrapping: true,
             viewportMargin: Infinity
@@ -1280,7 +1280,7 @@
         window.edit_javascript_editor = CodeMirror.fromTextArea(document.getElementById("edit_algorithm_javascript_textarea"), {
             mode: "javascript",
             lineNumbers: false,
-            theme: "the-matrix",
+            //theme: "the-matrix",
             autoRefresh: true,
             lineWrapping: true,
             viewportMargin: Infinity
@@ -1292,7 +1292,7 @@
         window.create_html_editor = CodeMirror.fromTextArea(document.getElementById("create_algorithm_html_textarea"), {
             mode: "xml",
             lineNumbers: false,
-            theme: "the-matrix",
+            //theme: "the-matrix",
             autoRefresh: true,
             lineWrapping: true,
             viewportMargin: Infinity
@@ -1301,7 +1301,7 @@
         window.create_javascript_editor = CodeMirror.fromTextArea(document.getElementById("create_algorithm_javascript_textarea"), {
             mode: "javascript",
             lineNumbers: false,
-            theme: "the-matrix",
+            //theme: "the-matrix",
             autoRefresh: true,
             lineWrapping: true,
             viewportMargin: Infinity
@@ -1597,7 +1597,7 @@
                 width_editor = CodeMirror.fromTextArea(document.getElementById(context_identifier + '_width_exact_js'), {
                     mode: "javascript",
                     lineNumbers: false,
-                    theme: "the-matrix",
+                    //theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
                     viewportMargin: Infinity
@@ -1609,7 +1609,7 @@
                 height_editor = CodeMirror.fromTextArea(document.getElementById(context_identifier + '_height_exact_js'), {
                     mode: "javascript",
                     lineNumbers: false,
-                    theme: "the-matrix",
+                    //theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
                     viewportMargin: Infinity
@@ -2121,7 +2121,7 @@
 
                 frag_editor = CodeMirror.fromTextArea(document.getElementById(program_identifier + '_frag_code'), {
                     lineNumbers: false,
-                    theme: "the-matrix",
+                    //theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
                     viewportMargin: Infinity
@@ -2132,7 +2132,7 @@
 
                 vert_editor = CodeMirror.fromTextArea(document.getElementById(program_identifier + '_vert_code'), {
                     lineNumbers: false,
-                    theme: "the-matrix",
+                    //theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
                     viewportMargin: Infinity
@@ -2201,7 +2201,7 @@
                     uniform_js_editor = CodeMirror.fromTextArea(document.getElementById(uniform_identifier + '_js_code'), {
                         mode: "javascript",
                         lineNumbers: false,
-                        theme: "the-matrix",
+                        //theme: "the-matrix",
                         autoRefresh: true,
                         lineWrapping: true,
                         viewportMargin: Infinity
@@ -2732,7 +2732,7 @@
                 indices_editor = CodeMirror.fromTextArea(document.getElementById(stage_identifier + '_indices_code'), {
                     mode: "xml",
                     lineNumbers: false,
-                    theme: "the-matrix",
+                    //theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
                     viewportMargin: Infinity
@@ -2744,7 +2744,7 @@
                 vertices_editor = CodeMirror.fromTextArea(document.getElementById(stage_identifier + '_vertices_code'), {
                     mode: "xml",
                     lineNumbers: false,
-                    theme: "the-matrix",
+                    //theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
                     viewportMargin: Infinity
