--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="codemirror/lib/codemirror.css">
     <link rel="stylesheet" href="codemirror/addon/dialog/dialog.css">
     <link rel="stylesheet" href="codemirror/addon/search/matchesonscrollbar.css">
-    <link rel="stylesheet" href="codemirror/theme/the-matrix.css">
+    <!-- <link rel="stylesheet" href="codemirror/theme/the-matrix.css"> -->
 
     <script type="text/javascript" src="codemirror/lib/codemirror.js"></script>
     <script type="text/javascript" src="codemirror/mode/javascript/javascript.js"></script>
@@ -1270,7 +1270,7 @@
 
         window.edit_html_editor = CodeMirror.fromTextArea(document.getElementById("edit_algorithm_html_textarea"), {
             mode: "xml",
-            lineNumbers: false,
+            lineNumbers: true,
             //theme: "the-matrix",
             autoRefresh: true,
             lineWrapping: true,
@@ -1279,7 +1279,7 @@
         window.edit_html_editor.getWrapperElement().id = "algorithm_html_codemirror"
         window.edit_javascript_editor = CodeMirror.fromTextArea(document.getElementById("edit_algorithm_javascript_textarea"), {
             mode: "javascript",
-            lineNumbers: false,
+            lineNumbers: true,
             //theme: "the-matrix",
             autoRefresh: true,
             lineWrapping: true,
@@ -1291,7 +1291,7 @@
 
         window.create_html_editor = CodeMirror.fromTextArea(document.getElementById("create_algorithm_html_textarea"), {
             mode: "xml",
-            lineNumbers: false,
+            lineNumbers: true,
             //theme: "the-matrix",
             autoRefresh: true,
             lineWrapping: true,
@@ -1300,7 +1300,7 @@
         window.create_html_editor.getWrapperElement().id = "algorithm_html_codemirror"
         window.create_javascript_editor = CodeMirror.fromTextArea(document.getElementById("create_algorithm_javascript_textarea"), {
             mode: "javascript",
-            lineNumbers: false,
+            lineNumbers: true,
             //theme: "the-matrix",
             autoRefresh: true,
             lineWrapping: true,
@@ -1596,7 +1596,7 @@
                 var context_identifier = context.identifier;
                 width_editor = CodeMirror.fromTextArea(document.getElementById(context_identifier + '_width_exact_js'), {
                     mode: "javascript",
-                    lineNumbers: false,
+                    lineNumbers: true,
                     //theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
@@ -1608,7 +1608,7 @@
 
                 height_editor = CodeMirror.fromTextArea(document.getElementById(context_identifier + '_height_exact_js'), {
                     mode: "javascript",
-                    lineNumbers: false,
+                    lineNumbers: true,
                     //theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
@@ -2120,7 +2120,7 @@
                 this.program_codemirrors.push([]);
 
                 frag_editor = CodeMirror.fromTextArea(document.getElementById(program_identifier + '_frag_code'), {
-                    lineNumbers: false,
+                    lineNumbers: true,
                     //theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
@@ -2131,7 +2131,7 @@
                 this.program_codemirrors[i].push(frag_editor);
 
                 vert_editor = CodeMirror.fromTextArea(document.getElementById(program_identifier + '_vert_code'), {
-                    lineNumbers: false,
+                    lineNumbers: true,
                     //theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
@@ -2200,7 +2200,7 @@
 
                     uniform_js_editor = CodeMirror.fromTextArea(document.getElementById(uniform_identifier + '_js_code'), {
                         mode: "javascript",
-                        lineNumbers: false,
+                        lineNumbers: true,
                         //theme: "the-matrix",
                         autoRefresh: true,
                         lineWrapping: true,
@@ -2731,7 +2731,7 @@
 
                 indices_editor = CodeMirror.fromTextArea(document.getElementById(stage_identifier + '_indices_code'), {
                     mode: "xml",
-                    lineNumbers: false,
+                    lineNumbers: true,
                     //theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
@@ -2743,7 +2743,7 @@
 
                 vertices_editor = CodeMirror.fromTextArea(document.getElementById(stage_identifier + '_vertices_code'), {
                     mode: "xml",
-                    lineNumbers: false,
+                    lineNumbers: true,
                     //theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
