--- a/www/index.html
+++ b/www/index.html
@@ -1270,7 +1270,7 @@
 
         window.edit_html_editor = CodeMirror.fromTextArea(document.getElementById("edit_algorithm_html_textarea"), {
             mode: "xml",
-            lineNumbers: true,
+            lineNumbers: false,
             //theme: "the-matrix",
             autoRefresh: true,
             lineWrapping: true,
@@ -1279,7 +1279,7 @@
         window.edit_html_editor.getWrapperElement().id = "algorithm_html_codemirror"
         window.edit_javascript_editor = CodeMirror.fromTextArea(document.getElementById("edit_algorithm_javascript_textarea"), {
             mode: "javascript",
-            lineNumbers: true,
+            lineNumbers: false,
             //theme: "the-matrix",
             autoRefresh: true,
             lineWrapping: true,
@@ -1293,7 +1293,7 @@
 
         window.create_html_editor = CodeMirror.fromTextArea(document.getElementById("create_algorithm_html_textarea"), {
             mode: "xml",
-            lineNumbers: true,
+            lineNumbers: false,
             //theme: "the-matrix",
             autoRefresh: true,
             lineWrapping: true,
@@ -1302,7 +1302,7 @@
         window.create_html_editor.getWrapperElement().id = "algorithm_html_codemirror"
         window.create_javascript_editor = CodeMirror.fromTextArea(document.getElementById("create_algorithm_javascript_textarea"), {
             mode: "javascript",
-            lineNumbers: true,
+            lineNumbers: false,
             //theme: "the-matrix",
             autoRefresh: true,
             lineWrapping: true,
@@ -1600,7 +1600,7 @@
                 var context_identifier = context.identifier;
                 width_editor = CodeMirror.fromTextArea(document.getElementById(context_identifier + '_width_exact_js'), {
                     mode: "javascript",
-                    lineNumbers: true,
+                    lineNumbers: false,
                     //theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
@@ -1613,7 +1613,7 @@
 
                 height_editor = CodeMirror.fromTextArea(document.getElementById(context_identifier + '_height_exact_js'), {
                     mode: "javascript",
-                    lineNumbers: true,
+                    lineNumbers: false,
                     //theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
@@ -2126,7 +2126,7 @@
                 this.program_codemirrors.push([]);
 
                 frag_editor = CodeMirror.fromTextArea(document.getElementById(program_identifier + '_frag_code'), {
-                    lineNumbers: true,
+                    lineNumbers: false,
                     //theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
@@ -2138,7 +2138,7 @@
                 this.program_codemirrors[i].push(frag_editor);
 
                 vert_editor = CodeMirror.fromTextArea(document.getElementById(program_identifier + '_vert_code'), {
-                    lineNumbers: true,
+                    lineNumbers: false,
                     //theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
@@ -2208,7 +2208,7 @@
 
                     uniform_js_editor = CodeMirror.fromTextArea(document.getElementById(uniform_identifier + '_js_code'), {
                         mode: "javascript",
-                        lineNumbers: true,
+                        lineNumbers: false,
                         //theme: "the-matrix",
                         autoRefresh: true,
                         lineWrapping: true,
@@ -2740,7 +2740,7 @@
 
                 indices_editor = CodeMirror.fromTextArea(document.getElementById(stage_identifier + '_indices_code'), {
                     mode: "xml",
-                    lineNumbers: true,
+                    lineNumbers: false,
                     //theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
@@ -2754,7 +2754,7 @@
 
                 vertices_editor = CodeMirror.fromTextArea(document.getElementById(stage_identifier + '_vertices_code'), {
                     mode: "xml",
-                    lineNumbers: true,
+                    lineNumbers: false,
                     //theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
