--- a/www/index.html
+++ b/www/index.html
@@ -1002,6 +1002,8 @@
                     i--;
                 }
             }
+            
+            this.refresh_codemirrors();
         }
 
         GlobalState.prototype.hide_popover = function (popover) {
