--- a/www/codemirror/mode/rpm/changes/index.html
+++ b/www/codemirror/mode/rpm/changes/index.html
@@ -57,7 +57,7 @@ Wed Oct  5 14:34:10 UTC 2011 - misterx@example.com
     <script>
       var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
         mode: {name: "changes"},
-        lineNumbers: true,
+        lineNumbers: false,
         indentUnit: 4
       });
     </script>
