--- a/www/index.html
+++ b/www/index.html
@@ -1289,7 +1289,7 @@
 
         window.edit_html_editor = CodeMirror.fromTextArea(document.getElementById("edit_algorithm_html_textarea"), {
             mode: "xml",
-            lineNumbers: true,
+            lineNumbers: false,
             theme: "the-matrix",
             autoRefresh: true,
             lineWrapping: true,
@@ -1298,7 +1298,7 @@
         window.edit_html_editor.getWrapperElement().id = "algorithm_html_codemirror"
         window.edit_javascript_editor = CodeMirror.fromTextArea(document.getElementById("edit_algorithm_javascript_textarea"), {
             mode: "javascript",
-            lineNumbers: true,
+            lineNumbers: false,
             theme: "the-matrix",
             autoRefresh: true,
             lineWrapping: true,
@@ -1312,7 +1312,7 @@
 
         window.create_html_editor = CodeMirror.fromTextArea(document.getElementById("create_algorithm_html_textarea"), {
             mode: "xml",
-            lineNumbers: true,
+            lineNumbers: false,
             theme: "the-matrix",
             autoRefresh: true,
             lineWrapping: true,
@@ -1321,7 +1321,7 @@
         window.create_html_editor.getWrapperElement().id = "algorithm_html_codemirror"
         window.create_javascript_editor = CodeMirror.fromTextArea(document.getElementById("create_algorithm_javascript_textarea"), {
             mode: "javascript",
-            lineNumbers: true,
+            lineNumbers: false,
             theme: "the-matrix",
             autoRefresh: true,
             lineWrapping: true,
@@ -1619,7 +1619,7 @@
                 var context_identifier = context.identifier;
                 width_editor = CodeMirror.fromTextArea(document.getElementById(context_identifier + '_width_exact_js'), {
                     mode: "javascript",
-                    lineNumbers: true,
+                    lineNumbers: false,
                     theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
@@ -1632,7 +1632,7 @@
 
                 height_editor = CodeMirror.fromTextArea(document.getElementById(context_identifier + '_height_exact_js'), {
                     mode: "javascript",
-                    lineNumbers: true,
+                    lineNumbers: false,
                     theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
@@ -2145,7 +2145,7 @@
                 this.program_codemirrors.push([]);
 
                 frag_editor = CodeMirror.fromTextArea(document.getElementById(program_identifier + '_frag_code'), {
-                    lineNumbers: true,
+                    lineNumbers: false,
                     theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
@@ -2157,7 +2157,7 @@
                 this.program_codemirrors[i].push(frag_editor);
 
                 vert_editor = CodeMirror.fromTextArea(document.getElementById(program_identifier + '_vert_code'), {
-                    lineNumbers: true,
+                    lineNumbers: false,
                     theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
@@ -2227,7 +2227,7 @@
 
                     uniform_js_editor = CodeMirror.fromTextArea(document.getElementById(uniform_identifier + '_js_code'), {
                         mode: "javascript",
-                        lineNumbers: true,
+                        lineNumbers: false,
                         theme: "the-matrix",
                         autoRefresh: true,
                         lineWrapping: true,
@@ -2759,7 +2759,7 @@
 
                 indices_editor = CodeMirror.fromTextArea(document.getElementById(stage_identifier + '_indices_code'), {
                     mode: "xml",
-                    lineNumbers: true,
+                    lineNumbers: false,
                     theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
@@ -2773,7 +2773,7 @@
 
                 vertices_editor = CodeMirror.fromTextArea(document.getElementById(stage_identifier + '_vertices_code'), {
                     mode: "xml",
-                    lineNumbers: true,
+                    lineNumbers: false,
                     theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true,
