--- a/www/codemirror/mode/rpm/changes/index.html
+++ b/www/codemirror/mode/rpm/changes/index.html
@@ -55,7 +55,7 @@ Wed Oct  5 14:34:10 UTC 2011 - misterx@example.com
     gdb functions and pretty printer
 </textarea></div>
     <script>
-      var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
+      var editor = CodeMirror(document.getElementById("code"), {
         mode: {name: "changes"},
         lineNumbers: false,
         indentUnit: 4
