--- a/www/codemirror/mode/rpm/changes/index.html
+++ b/www/codemirror/mode/rpm/changes/index.html
@@ -55,9 +55,9 @@ Wed Oct  5 14:34:10 UTC 2011 - misterx@example.com
     gdb functions and pretty printer
 </textarea></div>
     <script>
-      var editor = CodeMirror(document.getElementById("code"), {
+      var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
         mode: {name: "changes"},
-        lineNumbers: false,
+        lineNumbers: true,
         indentUnit: 4
       });
     </script>
