--- a/www/index.html
+++ b/www/index.html
@@ -147,20 +147,10 @@
             default_algorithm_program, default_algorithm_stage, default_create_algorithm;
 
         GlobalState.prototype.refresh_codemirrors = function(){
-            window.edit_javascript_editor.refresh();
-            window.edit_html_editor.refresh();
-            
-            window.create_javascript_editor.refresh();
-            window.create_html_editor.refresh();
-
-            for(var i = 0; i < this.context_codemirrors; i++)
-                this.context_codemirrors[i].refresh();
-            for(var i = 0; i < this.program_codemirrors; i++)
-                for(var j = 0; j < this.program_codemirrors[i].length; j++)
-                    this.program_codemirrors[i][j].refresh();
-            for(var i = 0; i < this.stage_codemirrors; i++)
-                for(var j = 0; j < this.stage_codemirrors[i].length; j++)
-                    this.stage_codemirrors[i][j].refresh();
+            $('.autoresizing').on('input', function () {
+                this.style.height = 'auto';
+                this.style.height = (this.scrollHeight) + 'px';
+            });
         }
 
         GlobalState.prototype.wait_for_proto_and_connect = function (most_likely_page) {
